# DeBERTa-package

./: README.md  pyproject.toml
experiments/glue/: cola.sh  mnli.sh  mrpc.sh  qnli.sh  qqp.sh  rte.sh  sst2.sh  stsb.sh
experiments/language_model/: mlm.sh  prepare_data.py  rtd.sh
experiments/my_exp/: alpha_nli.py  race_task.py  run_anli.sh  run_race.sh
experiments/ner/: ner.sh
experiments/superglue/: copa.sh  record.sh
src/deberta/apps/: run.py
src/deberta/apps/tasks/: task_registry.py
src/deberta/deberta/: cache_utils.py  disentangled_attention.py
